@@ -1,4 +1,4 @@
-# This file contains tests for the file tclCompile.c.
+# This file contains tests for the files tclCompile.c and tclCompCmds.c
 #
 # This file contains a collection of tests for one or more of the Tcl
 # built-in commands.  Sourcing this file into Tcl runs the tests and
@@ -89,6 +89,14 @@ test compile-3.2 {TclCompileCatchCmd: non-local variables} {
     catch-test
     set ::foo
 } 3
+test compile-3.3 {TclCompileCatchCmd: overagressive compiling [bug 219184]} {
+    proc catch-test {str} {
+	catch [eval $str GOOD]
+	error BAD
+    }
+    catch {catch-test error} ::foo
+    set ::foo
+} {GOOD}
 
 test compile-4.1 {TclCompileForCmd: command substituted test expression} {
     set i 0
