@@ -1,3 +1,9 @@
+2001-08-21  Miguel Sofer  <msofer@users.sourceforge.net>
+
+	* generic/tclCompCmds.c:
+	* tests/compile.test: Fixed overagressive compilation of [catch]:
+	it was catching errors at substitution time. [Bug #219184]
+	
 2001-08-21  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* tests/tcltest.test (tcltest-12.2): fixed test that would break
